--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 # resty.http: from https://github.com/liseen/lua-resty-http
 #user  nginx;
-worker_processes  2;
+worker_processes  1;
 
 #error_log  logs/error.log debug_core debug_http;
 error_log   logs/error.log;
@@ -59,6 +59,10 @@ http {
     tfs_connect_timeout 3s;
     tfs_read_timeout 3s;
     #gzip  on;
+
+    #local cache is enabled by default
+    set $image_cache on;
+
     server {
         listen 10500;
         listen 80;
@@ -90,11 +94,11 @@ http {
             rewrite_by_lua '
             local img_server = require "imageserver"
             local tfs_name = img_server.get_tfsname(ngx.var.h00name)
+            
             if tfs_name == nil then
                 ngx.exit(ngx.HTTP_NOT_FOUND)
             else
-            
-            ngx.req.set_uri("/" .. ngx.var.path .. "/" .. ngx.var.h00prefix .. tfs_name, true)
+                ngx.req.set_uri("/" .. ngx.var.path .. "/" .. ngx.var.h00prefix .. tfs_name, true)
             end
             ';
         }
@@ -146,13 +150,12 @@ http {
             set $reqPath "/${gravity},${f1},${f2}_${size}x${size}";
             set $orig_composite  "${gravity},${f1},${f2}";
             set $filePath "$image_root$reqPath";
-            set $file $filePath;
 
             if (-f $filePath) {
                 rewrite ^ /innerImages$reqPath last;
             }
 
-            if (!-f $file) {
+            if (!-f $filePath) {
                 rewrite_by_lua '
                 local ngx = require "ngx"
                 local img_server = require "imageserver"
@@ -190,13 +193,24 @@ http {
             set $f2 $4;
             set $reqPath "/${gravity},${f1},${f2}";
             set $filePath "$image_root$reqPath";
-            set $file $filePath;
             # echo "return: $reqPath";
+            # if (-f $filePath) {
+            #     rewrite ^ /innerImages$reqPath last;
+            # }
+
+            set $flag 0;
+            if ($image_cache != "off") {
+                set $flag "${flag}1";
+            }
             if (-f $filePath) {
+                set $flag "${flag}1";
+            }
+
+            if ($flag == "011") {
                 rewrite ^ /innerImages$reqPath last;
             }
-        
-            if (!-f $file) {
+            # if (!-f $filePath) {
+            if ($flag != "011") {
                 rewrite_by_lua '          
                 local ngx = require "ngx"
                 local img_server = require "imageserver"
