--- a/nginx.conf
+++ b/nginx.conf
@@ -60,9 +60,6 @@ http {
     tfs_read_timeout 3s;
     #gzip  on;
 
-    #local cache is enabled by default
-    set $image_cache on;
-
     server {
         listen 10500;
         listen 80;
@@ -187,29 +184,33 @@ http {
             }
         }
 
+        #local cache is enabled by default
+        set $image_cache on;
+
         location ~ "^/tfs/(orig/|)(nw|ne|se|sw|ct),(T[[:alnum:]_\.]{17}),(T[[:alnum:]_\.]{17})" {
             set $gravity $2;
             set $f1 $3;
             set $f2 $4;
             set $reqPath "/${gravity},${f1},${f2}";
             set $filePath "$image_root$reqPath";
-            # echo "return: $reqPath";
+
             # if (-f $filePath) {
             #     rewrite ^ /innerImages$reqPath last;
             # }
+            # if (!-f $filePath) {
 
             set $flag 0;
+            if (-f $filePath) {
+                set $flag "${flag}1";
+                set $cached 1;
+            }
             if ($image_cache != "off") {
                 set $flag "${flag}1";
             }
-            if (-f $filePath) {
-                set $flag "${flag}1";
-            }
 
-            if ($flag == "011") {
+            if ($flag = "011") {
                 rewrite ^ /innerImages$reqPath last;
             }
-            # if (!-f $filePath) {
             if ($flag != "011") {
                 rewrite_by_lua '          
                 local ngx = require "ngx"
@@ -221,15 +222,17 @@ http {
                     ngx.exit(ngx.HTTP_NOT_FOUND)
                 end
                 -- write file to local 
-                local ok, msg, code = img:write(ngx.var.filePath)
-                img:destroy()
-                if not (ok) then
-                    ngx.log(ngx.ERR, "ivk method[img:write] error, code:" .. code .. " msg:" .. msg)
-                    ngx.exit(ngx.HTTP_NOT_FOUND)
+                if tostring(ngx.var.cached) ~= "1" then
+                    local ok, msg, code = img:write(ngx.var.filePath)
+                    img:destroy()
+                    if not (ok) then
+                        ngx.log(ngx.ERR, "ivk method[img:write] error, code:" .. code .. " msg:" .. msg)
+                        ngx.exit(ngx.HTTP_NOT_FOUND)
+                    end
                 end
 
                 ngx.req.set_uri("/innerImages" .. ngx.var.reqPath, true); 
-            ';
+                ';
             }
         }
         # todo: merge 500 and 502 server port rule
