--- a/nginx.conf
+++ b/nginx.conf
@@ -184,9 +184,9 @@ http {
             }
         }
 
-        #local cache is enabled by default
-        set $image_cache on;
-
+        # for debug
+        set $img_debug off;
+        set $img_sample 1;
         location ~ "^/tfs/(orig/|)(nw|ne|se|sw|ct),(T[[:alnum:]_\.]{17}),(T[[:alnum:]_\.]{17})" {
             set $gravity $2;
             set $f1 $3;
@@ -194,41 +194,53 @@ http {
             set $reqPath "/${gravity},${f1},${f2}";
             set $filePath "$image_root$reqPath";
 
-            # if (-f $filePath) {
-            #     rewrite ^ /innerImages$reqPath last;
-            # }
-            # if (!-f $filePath) {
-
-            set $flag 0;
+            set $flag "";
             if (-f $filePath) {
                 set $flag "${flag}1";
-                set $cached 1;
             }
-            if ($image_cache != "off") {
+            # debug
+            if ($img_debug != "on") {
                 set $flag "${flag}1";
             }
 
-            if ($flag = "011") {
+            if ($flag = "11") {
                 rewrite ^ /innerImages$reqPath last;
             }
-            if ($flag != "011") {
+            if ($flag != "11") {
                 rewrite_by_lua '          
                 local ngx = require "ngx"
                 local img_server = require "imageserver"
-                
-                local img, err = img_server.get_composite_as_image(ngx.var.v1_url, ngx.var.f2, ngx.var.f1, ngx.var.gravity)
+                local debug = tostring(ngx.var.img_debug) == "on"
+                local stop_watch = require "util.stopwatch"
+                local watch = nil
+
+                if (debug) then
+                    local sample = tonumber(ngx.var.img_sample)
+                    math.randomseed(os.time())
+                    debug = debug and (math.random(sample) % sample == 0)
+                end
+                if (debug) then
+                    watch = stop_watch.new()
+                end
+                local img, err = img_server.get_composite_as_image(ngx.var.v1_url, ngx.var.f2, ngx.var.f1, ngx.var.gravity, nil, watch)
                 if not (img) then
                     ngx.log(ngx.ERR, err)
                     ngx.exit(ngx.HTTP_NOT_FOUND)
                 end
+
                 -- write file to local 
-                if tostring(ngx.var.cached) ~= "1" then
-                    local ok, msg, code = img:write(ngx.var.filePath)
-                    img:destroy()
-                    if not (ok) then
-                        ngx.log(ngx.ERR, "ivk method[img:write] error, code:" .. code .. " msg:" .. msg)
-                        ngx.exit(ngx.HTTP_NOT_FOUND)
-                    end
+                if (debug) then 
+                    watch:start("write")
+                end
+                local ok, msg, code = img:write(ngx.var.filePath)
+                img:destroy()
+                if not (ok) then
+                    ngx.log(ngx.ERR, "ivk method[img:write] error, code:" .. code .. " msg:" .. msg)
+                    ngx.exit(ngx.HTTP_NOT_FOUND)
+                end
+                if (debug) then
+                    watch:stop()
+                    ngx.log(ngx.ERR, watch:prettyPrint())
                 end
 
                 ngx.req.set_uri("/innerImages" .. ngx.var.reqPath, true); 
