lua set keepalive bugfix

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ worker_processes  1;
 
 #error_log  logs/error.log debug_core debug_http;
 error_log   logs/error.log;
-#warn;
+#error_log  logs/error.log info;
 
 #pid        logs/nginx.pid;
 
@@ -69,6 +69,12 @@ http {
         set $image_root /usr/local/tfsimage;
         # tfs bug?: nginx-tfs-master/src/ngx_tfs_common.h:#define NGX_HTTP_TFS_MAX_FRAGMENT_SIZE                 (8 * 1024 * 1024)   
         client_max_body_size  1024m;
+        client_header_timeout 60;
+        send_timeout 60;
+        # lua request tfs
+        lua_socket_pool_size 15;
+        lua_socket_keepalive_timeout 300;
+        # tfs
         tfs_keepalive max_cached=50 bucket_count=10;
         tfs_log "pipe:/usr/sbin/cronolog -p 30min /usr/local/tengine/logs/cronolog/%Y/%m/%Y-%m-%d-%H-%M-tfs_access.log";
 
@@ -106,6 +112,7 @@ http {
 
         location ~^/v1/tfs {
             #chunked_transfer_encoding       off;
+            keepalive_timeout 300;
             tfs_pass tfs://tfs_ns;
         }
 
@@ -240,7 +247,7 @@ http {
                 end
                 if (debug) then
                     watch:stop()
-                    ngx.log(ngx.ERR, watch:prettyPrint())
+                    ngx.log(ngx.WARN, watch:prettyPrint())
                 end
 
                 ngx.req.set_uri("/innerImages" .. ngx.var.reqPath, true); 
