--- a/nginx.conf
+++ b/nginx.conf
@@ -304,6 +304,14 @@ http {
             tcp_nodelay off;
             tcp_nopush on;
         }
+
+        # for test/sit env
+        location ~ "^/tfs/norm_(\d{1,3})/(.+)$" {
+            set $size $1;
+            set $other $2;
+            rewrite ^  /norm_$size/$other last;
+        }
+
         location ~^/tfs {
             client_body_buffer_size 5m;
             types {}
