--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-# resty.http: from https://github.com/liseen/lua-resty-http
+#resty.http: from https://github.com/liseen/lua-resty-http
 #user  nginx;
 worker_processes  1;
 
@@ -30,8 +30,8 @@ http {
     proxy_buffers 8 1m;
     proxy_busy_buffers_size  1m;
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    '$status $body_bytes_sent $request_length $request_time "$http_referer" '
-    '"$http_user_agent" "$http_x_forwarded_for" "$host"';
+        '$status $body_bytes_sent $request_length $request_time "$http_referer" '
+        '"$http_user_agent" "$http_x_forwarded_for" "$host"';
 
     access_log  logs/access.log  main;
     log_empty_request off;
@@ -62,7 +62,7 @@ http {
 
     server {
         listen 10500;
-        listen 80;
+        listen 10502;
         server_name 10.77.135.117;
         #chunked_transfer_encoding       off;
         set $v1_url "http://127.0.0.1:10500/v1/tfs";
@@ -76,8 +76,12 @@ http {
         lua_socket_keepalive_timeout 300;
         # tfs
         tfs_keepalive max_cached=50 bucket_count=10;
-        tfs_log "pipe:/usr/sbin/cronolog -p 30min /usr/local/tengine/logs/cronolog/%Y/%m/%Y-%m-%d-%H-%M-tfs_access.log";
+        tfs_log "pipe:/usr/sbin/cronolog -p 30min                   /usr/local/tengine/logs/cronolog/%Y/%m/%Y-%m-%d-%H-%M-tfs_access.log";
 
+        location  = /tfs/favicon.ico {
+            rewrite ^  /favicon.ico break;
+        }
+        
         # temporary location for 12.12. Must precede other locations
         location ~ "^/(.*)/label_(\d+)_(T[^/]{17,50})$" {
             set $path $1;
@@ -110,12 +114,11 @@ http {
             rewrite ^/v1/tfs/orig/(.*) /v1/tfs/$1 last;
         }
 
-        location ~^/v1/tfs {
+        location ~ "^/v1/tfs" {
             #chunked_transfer_encoding       off;
             keepalive_timeout 300;
             tfs_pass tfs://tfs_ns;
         }
-
 
         # GET /get?key=some_key
         location /get {
@@ -142,13 +145,10 @@ http {
             redis2_send_timeout 500ms;
         }
 
-        location  = /tfs/favicon.ico {
-            rewrite ^  /favicon.ico break;
-        }
-
         location ~ "^/norm_(\d{1,3})/(nw|ne|se|sw|ct),(T[[:alnum:]_\.]{17}),(T[[:alnum:]_\.]{17})" {
             set $size $1;
             set $gravity $2;
+            set $geometry "$1x$1";
             set $f1 $3;
             set $f2 $4;
             set $reqPath "/${gravity},${f1},${f2}_${size}x${size}";
@@ -158,31 +158,36 @@ http {
             if (-f $filePath) {
                 rewrite ^ /innerImages$reqPath last;
             }
-
             if (!-f $filePath) {
                 rewrite_by_lua '
                 local ngx = require "ngx"
                 local img_server = require "imageserver"
                 local magick = require "magick"
+                local i_util = require "magick.libutil"
 
                 local img = magick.load_image(ngx.var.orig_composite)
                 if not (img) then
-                    img = img_server.get_composite_as_image(ngx.var.v1_url, ngx.var.f2, ngx.var.f1, ngx.var.gravity)
+                    img = img_server.get_composite_as_image(ngx.var.v1_url, ngx.var.f2, 
+                        ngx.var.f1, ngx.var.gravity)
                 end
-                
                 if not (img) then
                     ngx.exit(ngx.HTTP_NOT_FOUND)
                 end
-                
-                local size = tonumber(ngx.var.size)
-                if size ~= nil then
-                    img:resize(size, size)
+                -- resize
+                local w, h = i_util.parse_geometry(ngx.var.geometry, img:get_width(), 
+                    img:get_height())
+                if not (w) then
+                    ngx.log(ngx.ERR, err)
+                    ngx.exit(ngx.HTTP_NOT_FOUND)
+                else 
+                    img:resize(w, h)
                 end
-
+                -- write
                 local ok, msg, code = img:write(ngx.var.filePath)
                 img:destroy()
                 if not (ok) then
-                    ngx.log(ngx.ERR, "ivk method[img:write] error, code:" .. code .. " msg:" .. msg)          
+                    ngx.log(ngx.ERR, "ivk method[img:write] error, code:" 
+                        .. code .. " msg:" .. msg)          
                     ngx.exit(ngx.HTTP_NOT_FOUND)
                 end         
 
@@ -229,7 +234,8 @@ http {
                 if (debug) then
                     watch = stop_watch.new()
                 end
-                local img, err = img_server.get_composite_as_image(ngx.var.v1_url, ngx.var.f2, ngx.var.f1, ngx.var.gravity, nil, watch)
+                local img, err = img_server.get_composite_as_image(ngx.var.v1_url, ngx.var.f2,
+                    ngx.var.f1, ngx.var.gravity, nil, watch)        
                 if not (img) then
                     ngx.log(ngx.ERR, err)
                     ngx.exit(ngx.HTTP_NOT_FOUND)
@@ -254,43 +260,13 @@ http {
                 ';
             }
         }
+
         # todo: merge 500 and 502 server port rule
         # label image on the left-top
         location ~ "^/tfs/(orig/|)label_(\d+)/([[:alnum:]_\.]{18,50})$" {
             set $label_id $2;
             set $tfsname $3;
-            set $reqPath "/LABEL_${label_id}_$tfsname";
-            set $filePath "$image_root$reqPath";
-            set $file $filePath;
-            # todo:
-            if ( $tfsname ~* "^h00.*") {
-                return 404;
-            }
-            if (-f $filePath) {
-                rewrite ^ /innerImages$reqPath last;
-            }
-            if (!-f $file) {
-                rewrite_by_lua '
-                local img_server = require "imageserver"
-                
-                local label_name = "/usr/local/tengine/html/label_" .. ngx.var.label_id .. ".png"
-                local img, err = img_server.get_composite_as_image(ngx.var.v1_url, ngx.var.tfsname, label_name, "nw")
-                if not (img) then
-                    ngx.log(ngx.ERR, err)
-                    ngx.exit(ngx.HTTP_NOT_FOUND)
-                end
-
-                -- write file to local 
-                local ok, msg, code = img:write(ngx.var.filePath)
-                img:destroy()
-                if not (ok) then
-                    ngx.log(ngx.ERR, "ivk method[img:write] error, code:" .. code .. " msg:" .. msg)
-                    ngx.exit(ngx.HTTP_NOT_FOUND)
-                end
-
-                ngx.req.set_uri("/innerImages" .. ngx.var.reqPath, true);
-                ';
-            }
+            rewrite ^  /orig/label_$label_id/$tfsname last;
         }
 
         location /innerImages {
@@ -312,14 +288,13 @@ http {
             rewrite ^  /norm_$size/$other last;
         }
 
-        location ~^/tfs {
+        location ~ "^/tfs" {
             client_body_buffer_size 5m;
             types {}
             default_type "";
-            if ($uri ~* "/tfs/(.*)") {
-                set $fname "$1";
+            if ($request_method != "POST") {
+                rewrite ^/tfs/(.*) /v1/tfs/$1 last;
             }
-            
             if ($request_method = "POST") {
                 content_by_lua '
                 local cjson = require "cjson"
@@ -346,39 +321,8 @@ http {
                 ngx.print(tfsname)
                 ';
             }
-            if ($request_method != "POST") {
-                rewrite ^/tfs/(.*) /v1/tfs/$1 last;
-            }
-        }
-    
-        # # mfs => tfs
-        location ~ "^/(.*)/([^/]*)h00([[:alnum:]_]{30,50})$" {
-            set $path $1;
-            set $h00prefix $2;
-            set $h00name $3;
-            rewrite_by_lua '
-            local img_server = require "imageserver"
-            local tfs_name = img_server.get_tfsname(ngx.var.h00name)
-            if tfs_name == nil then
-            ngx.exit(ngx.HTTP_NOT_FOUND)
-            else
-            
-            ngx.req.set_uri("/" .. ngx.var.path .. "/" .. ngx.var.h00prefix .. tfs_name, true)
-            end
-            ';
         }
 
-        # temporary location for 12.12. Must precede other locations /label_1_Txxx to /label_1/Txxx rewrite
-        location ~ "^/(.*)/label_(\d+)_(T[^/]{17,50})$" {
-            set $path $1;
-            set $label_id $2;
-            set $tfsname  $3;
-            rewrite ^ /$path/label_$label_id/$tfsname last;
-            # content_by_lua '
-            # ngx.say(ngx.var.path .. " " .. ngx.var.uri)
-            # ';
-        }
-        
         # direct tfs
         location ~ "^/norm(_m|)_(\d+)/([[:alnum:]_\.]{18,50})$" {
             set $_size $2;
@@ -406,9 +350,11 @@ http {
             set $tfsname $3;
             set $reqPath "/LABEL_${label_id}_$tfsname";
             set $g1 $1;
-            if ($g1 ~ "norm_(\d{1,3})/)" { set $size_x $1; set $size_y $1; set $reqPath "${reqPath}.$1x$1"; }
+            if ($g1 ~ "norm_(\d{1,3})/)" { 
+                set $geometry "$1x$1";
+                set $reqPath "${reqPath}.$1x$1"; 
+            }
             set $filePath "$image_root$reqPath";
-            set $file $filePath;
             # todo: 
             if ( $tfsname ~* "^h00.*") {
                 return 404;
@@ -416,25 +362,30 @@ http {
             if (-f $filePath) {
                 rewrite ^ /innerImages$reqPath last;
             }
-            if (!-f $file) {
+            if (!-f $filePath) {
                 rewrite_by_lua '
                 local img_server = require "imageserver"
-                
+                local i_util = require "magick.libutil"
+
                 -- composite
                 local label_name = "/usr/local/tengine/html/label_" .. ngx.var.label_id .. ".png"
-                local img, err = img_server.get_composite_as_image(ngx.var.v1_url, ngx.var.tfsname, label_name, "nw")
+                local img, err = img_server.get_composite_as_image(ngx.var.v1_url, 
+                    ngx.var.tfsname, label_name, "nw")
                 if not (img) then
                     ngx.log(ngx.ERR, err)
                     ngx.exit(ngx.HTTP_NOT_FOUND)
                 end
-                
                 -- resize
-                local size_x = tonumber(ngx.var.size_x)
-                local size_y = tonumber(ngx.var.size_y)
-                if (size_x ~= nil and size_y ~= nil) then
-                    img:resize(size_x, size_y)
+                if ngx.var.geometry ~= "" then
+                    local w, h = i_util.parse_geometry(ngx.var.geometry, img:get_width(), 
+                        img:get_height())
+                    if not (w) then
+                        ngx.log(ngx.ERR, err)
+                        ngx.exit(ngx.HTTP_NOT_FOUND)
+                    else 
+                        img:resize(w, h)
+                    end
                 end
-
                 -- write file to local 
                 local ok, msg, code = img:write(ngx.var.filePath)
                 img:destroy()
@@ -452,37 +403,40 @@ http {
             #internal;
             set $matched 0;
             if ($uri ~* "/images/(.*?)\.(\d{1,3})x(\d{1,3})$") {
+                set $matched 1;
                 set $filePath "$image_root/$1.$2x$3";
-                set $size_x $2;
-                set $size_y $3;
                 set $reqPath "/$1.$2x$3";
                 set $tfsname "$1";
+                set $geometry "$2x$3";
             } 
-            
+            if ($matched = 0) {
+                return 404;
+            }
             if ( $tfsname ~* "^h00.*") {
                 return 404;
             }
-            set $file "$image_root$reqPath";
-            if (-f $file) {
+            if (-f $filePath) {
                 rewrite "/images/(.+)" /innerImages$reqPath last;
             }
-            
-            if (!-f $file) { 
+            if (!-f $filePath) { 
                 rewrite_by_lua '
                 local img_server = require "imageserver"
+                local i_util = require "magick.libutil"
 
                 local img, err = img_server.get_tfs_as_img(ngx.var.v1_url .. "/", ngx.var.tfsname)
                 if not (img) then
                     ngx.log(ngx.ERR, err)
                     ngx.exit(ngx.HTTP_NOT_FOUND)
                 end
-                
-                local size_x = tonumber(ngx.var.size_x)
-                local size_y = tonumber(ngx.var.size_y)
-                if (size_x ~= nil and size_y ~= nil) then
-                    img:resize(size_x, size_y)
+                -- resize
+                local w, h = i_util.parse_geometry(ngx.var.geometry, img:get_width(), 
+                    img:get_height())
+                if not (w) then
+                    ngx.log(ngx.ERR, err)
+                    ngx.exit(ngx.HTTP_NOT_FOUND)
+                else 
+                    img:resize(w, h)
                 end
-
                 -- write file to local 
                 local ok, msg, code = img:write(ngx.var.filePath)
                 img:destroy()
