add install script

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,7 @@ http {
     #default_type  application/octet-stream;
     default_type  text/html;    
     
-    lua_package_path "/home/admin/conf/lua/?.lua;;";
+    lua_package_path "/var/wd/wrs/webroot/picture/?.lua;;";
     lua_shared_dict htmls 4m;
     proxy_buffers 8 1m;
     proxy_busy_buffers_size  1m;
@@ -63,7 +63,7 @@ http {
     server {
         listen 10500;
         listen 10502;
-        server_name 10.77.135.117;
+        server_name 192.168.10.248;
         #chunked_transfer_encoding       off;
         set $v1_url "http://127.0.0.1:10500/v1/tfs";
         set $image_root /usr/local/tfsimage;
@@ -312,6 +312,9 @@ http {
                 local args = ngx.var.args
                 if args == nil  then args = "" end
                 local ok, code, headers, status, body  = hc:request { url = ngx.var.v1_url .. "?" .. args, method="POST",  body=body_data}
+                if code ~= 200 then
+                    ngx.exit(code)
+                end
                 local data = cjson.decode(body);
                 local tfsname = data["TFS_FILE_NAME"]
                 --if tfsname ~= nil then
