--- a/nginx.conf
+++ b/nginx.conf
@@ -149,8 +149,20 @@ http {
 
         location ~ "^/v1/tfs" {
             #chunked_transfer_encoding       off;
+            # tfs_pass unsupport limit_except
+            #limit_except GET POST {
+            #    allow 192.168.10.248;
+            #    allow 127.0.0.1;
+            #    deny  all;
+            #}
             keepalive_timeout 300;
-            tfs_pass tfs://tfs_ns;
+            if ($request_method = PUT) {set $flag "1";}
+            if ($request_method = DELETE) {set $flag "1";}
+            if ($remote_addr = 192.168.10.248) {set $flag "";}
+            if ($flag = "1") {return 403;}
+            if ($flag != "1") {
+                tfs_pass tfs://tfs_ns;
+            }
         }
 
         # GET /get?key=some_key
