bugfix: tfs log output to error.log

--- a/nginx.conf
+++ b/nginx.conf
@@ -76,7 +76,7 @@ http {
         lua_socket_keepalive_timeout 300;
         # tfs
         tfs_keepalive max_cached=50 bucket_count=10;
-        tfs_log "pipe:/usr/sbin/cronolog -p 30min                   /usr/local/tengine/logs/cronolog/%Y/%m/%Y-%m-%d-%H-%M-tfs_access.log";
+        tfs_log "pipe:/usr/sbin/cronolog -p 1days /usr/local/tengine/logs/cronolog/%Y/%m/%Y-%m-%d-tfs_access.log" error;
 
         location  = /tfs/favicon.ico {
             rewrite ^  /favicon.ico break;
