--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 #resty.http: from https://github.com/liseen/lua-resty-http
-#user  nginx;
+#user  root;
 worker_processes  1;
 
 #error_log  logs/error.log debug_core debug_http;
@@ -76,7 +76,8 @@ http {
         lua_socket_keepalive_timeout 300;
         # tfs
         tfs_keepalive max_cached=50 bucket_count=10;
-        tfs_log "pipe:/usr/sbin/cronolog -p 1days /usr/local/tengine/logs/cronolog/%Y/%m/%Y-%m-%d-tfs_access.log" error;
+        # nobody user user does not have permission to /usr/local/...
+        tfs_log "pipe:/usr/sbin/cronolog -p 1days /tmp/tengine/logs/cronolog/%Y/%m/%Y-%m-%d-tfs_access.log" error;
 
         ## --------sort by nginx location priority: = > ^~ > ~ > /------------
 
