bugfix: lua conn keeplive & webp

--- a/nginx.conf
+++ b/nginx.conf
@@ -426,8 +426,8 @@ http {
             set $matched 0;
             if ($uri ~* "/images/(.*?)\.(\d{1,3})x(\d{1,3})$") {
                 set $matched 1;
-                set $reqPath "/$1.$2x$3";
-                set $filePath "$image_root/$1.$2x$3${_ext}";
+                set $reqPath "/$1.$2x$3${_ext}";
+                set $filePath "$image_root$reqPath";
                 set $tfsname "$1";
                 set $geometry "$2x$3";
             } 
