add crop, resize...feature

--- a/nginx.conf
+++ b/nginx.conf
@@ -115,6 +115,16 @@ http {
             set $_ext "${_ext}_q${_q}";
             rewrite ^ /$path last;
         }
+
+        set $_rate "";
+        location ~ "^/(.*?)_(\d{1,3})(!|!!)/(.*?)$" {
+            set $path $1;
+            set $size $2;
+            set $_rate $3;
+            set $tail $4;
+            set $_ext "${_rate}${_ext}";
+            rewrite ^ /${path}_${size}/$tail last;
+        }
         
         # temporary location for 12.12. Must precede other locations
         location ~ "^/(.*)/label_(\d+)_(T[^/]{17,50})$" {
@@ -212,13 +222,25 @@ http {
                     ngx.exit(ngx.HTTP_NOT_FOUND)
                 end
                 -- resize
-                local w, h = i_util.parse_geometry(ngx.var.geometry, img:get_width(), 
-                    img:get_height())
-                if not (w) then
-                    ngx.log(ngx.ERR, err)
-                    ngx.exit(ngx.HTTP_NOT_FOUND)
-                else 
-                    img:resize(w, h)
+                local r = ngx.var._rate
+                if r ~= nil and r ~= "" then
+                    if r == "!" then
+                        img:resize(tonumber(ngx.var.size), tonumber(ngx.var.size))
+                    elseif r == "!!" then
+                        img:resize_and_crop(tonumber(ngx.var.size), tonumber(ngx.var.size))
+                    else
+                        ngx.log(ngx.ERR, "Unsupport resize type:" .. r)
+                        ngx.exit(ngx.HTTP_NOT_FOUND)
+                    end 
+                else
+                    local w, h = i_util.parse_geometry(ngx.var.geometry, img:get_width(), 
+                        img:get_height())
+                    if not (w) then
+                        ngx.log(ngx.ERR, err)
+                        ngx.exit(ngx.HTTP_NOT_FOUND)
+                    else 
+                        img:resize(w, h)
+                    end
                 end
                 img:to_webp(ngx.var._q, ngx.var._fmt)
                 -- write
@@ -370,6 +392,7 @@ http {
             set $reqPath "/LABEL_${label_id}_$tfsname";
             set $g1 $1;
             if ($g1 ~ "norm_(\d{1,3})/)" { 
+                set $size $1;
                 set $geometry "$1x$1";
                 set $reqPath "${reqPath}.$1x$1"; 
             }
@@ -397,17 +420,28 @@ http {
                 end
                 -- resize
                 if ngx.var.geometry ~= "" then
-                    local w, h = i_util.parse_geometry(ngx.var.geometry, img:get_width(), 
-                        img:get_height())
-                    if not (w) then
-                        ngx.log(ngx.ERR, err)
-                        ngx.exit(ngx.HTTP_NOT_FOUND)
-                    else 
-                        img:resize(w, h)
+                    local r = ngx.var._rate
+                    if r ~= nil and r ~= "" then
+                        if r == "!" then
+                            img:resize(tonumber(ngx.var.size), tonumber(ngx.var.size))
+                        elseif r == "!!" then
+                            img:resize_and_crop(tonumber(ngx.var.size), tonumber(ngx.var.size))
+                        else
+                            ngx.log(ngx.ERR, "Unsupport resize type:" .. r)
+                            ngx.exit(ngx.HTTP_NOT_FOUND)
+                        end 
+                    else
+                       local w, h = i_util.parse_geometry(ngx.var.geometry, img:get_width(), 
+                            img:get_height())
+                        if not (w) then
+                            ngx.log(ngx.ERR, err)
+                            ngx.exit(ngx.HTTP_NOT_FOUND)
+                        else 
+                            img:resize(w, h)
+                        end
                     end
                 end
                 -- write file to local 
-                --ngx.log(ngx.ERR, img:get_format())
                 img:to_webp(ngx.var._q, ngx.var._fmt)
                 local ok, msg, code = img:write(ngx.var.filePath)
                 img:destroy()
@@ -430,6 +464,8 @@ http {
                 set $filePath "$image_root$reqPath";
                 set $tfsname "$1";
                 set $geometry "$2x$3";
+                set $_w $2;
+                set $_h $3;
             } 
             if ($matched = 0) {
                 return 404;
@@ -451,13 +487,25 @@ http {
                     ngx.exit(ngx.HTTP_NOT_FOUND)
                 end
                 -- resize
-                local w, h = i_util.parse_geometry(ngx.var.geometry, img:get_width(), 
-                    img:get_height())
-                if not (w) then
-                    ngx.log(ngx.ERR, err)
-                    ngx.exit(ngx.HTTP_NOT_FOUND)
-                else 
-                    img:resize(w, h)
+                local r = ngx.var._rate
+                if r ~= nil and r ~= "" then
+                    if r == "!" then
+                        img:resize(tonumber(ngx.var._w), tonumber(ngx.var._h))
+                    elseif r == "!!" then
+                        img:resize_and_crop(tonumber(ngx.var._w), tonumber(ngx.var._h))
+                    else
+                        ngx.log(ngx.ERR, "Unsupport resize type:" .. r)
+                        ngx.exit(ngx.HTTP_NOT_FOUND)
+                    end 
+                else
+                     local w, h = i_util.parse_geometry(ngx.var.geometry, img:get_width(), 
+                        img:get_height())
+                    if not (w) then
+                        ngx.log(ngx.ERR, err)
+                        ngx.exit(ngx.HTTP_NOT_FOUND)
+                    else 
+                        img:resize(w, h)
+                    end
                 end
                 img:to_webp(ngx.var._q, ngx.var._fmt)
                 -- write file to local 
