--- a/nginx.conf
+++ b/nginx.conf
@@ -362,6 +362,7 @@ http {
                 end
                 local data = cjson.decode(body);
                 local tfsname = data["TFS_FILE_NAME"]
+                ngx.log(ngx.ERR, "POST:" .. tfsname)
                 ngx.print(tfsname)
                 ';
             }
