bugfix label & add logstash

--- a/nginx.conf
+++ b/nginx.conf
@@ -87,9 +87,16 @@ http {
 
         location ^~ /innerImages {
             internal;
+
             header_filter_by_lua '
             local ngx = require "ngx"
-            ngx.header["Content-Type"] = nil
+            local img_server = require "imageserver"
+            
+            local uri = ngx.var.uri;
+            uri = string.gsub(uri, "^%/innerImages", "")
+            local img = img_server.get_tfs_as_img(nil, "/usr/local/tfsimage" .. uri)
+            ngx.header["Content-Type"] = img:get_minitype()
+            img:destroy()
             ';
             alias /usr/local/tfsimage;
             expires max;
@@ -174,6 +181,25 @@ http {
             if ($flag != "1") {
                 tfs_pass tfs://tfs_ns;
             }
+        }
+
+        location ~ "^/v2/tfs/(.*)" {
+        set $tfsname $1;
+        content_by_lua '
+        local img_server = require "imageserver"
+        local blob = img_server.get_tfs_as_blob(ngx.var.v1_url .. "/", ngx.var.tfsname)
+        if not (blob) then
+            ngx.exit(ngx.HTTP_NOT_FOUND)
+        end
+        local header =blob:sub(1,3)
+        if header == "\255\216\255" then
+            ngx.header["Content-Type"] = "image/jpeg"
+        elseif blob:sub(1,8) == "\137\80\78\71\13\10\26\10" then
+            ngx.header["Content-Type"] = "image/png"
+        end
+        --ngx.header["Content-Type2"] = "debug"
+        ngx.print(blob)
+        ';
         }
 
         # GET /get?key=some_key
@@ -342,8 +368,14 @@ http {
             client_body_buffer_size 5m;
             types {}
             default_type "";
-            if ($request_method != "POST") {
-                rewrite ^/tfs/(.*) /v1/tfs/$1 last;
+            if ($request_method = "GET") {
+                rewrite ^/tfs/(.*) /v2/tfs/$1 last;
+            }
+            if ($request_method = "PUT") {
+                rewrite ^/tfs/(.*) /v1/tfs/$1 last; 
+            }
+            if ($request_method = "DELETE") {
+                rewrite ^/tfs/(.*) /v1/tfs/$1 last; 
             }
             if ($request_method = "POST") {
                 content_by_lua '
@@ -362,7 +394,7 @@ http {
                 end
                 local data = cjson.decode(body);
                 local tfsname = data["TFS_FILE_NAME"]
-                ngx.log(ngx.ERR, "POST:" .. tfsname)
+                ngx.log(ngx.ERR, "POST:" .. tfsname ..", " .. string.len(body_data))
                 ngx.print(tfsname)
                 ';
             }
