--- a/nginx.conf
+++ b/nginx.conf
@@ -474,6 +474,14 @@ http {
             rewrite ^ /i4/$tail last;
         }
 
+        # match /tfs/norm_100/tfs or /tfs/norm_m_100/tfsname
+        location ~ "^/tfs/norm(_m|)_(\d+)/([[:alnum:]_\.]{18,50})$" {
+            set $g_w $2;
+            set $g_h $2;
+            set $tail $3;
+            rewrite ^ /i2/$tail last;
+        }
+
         # get/post tfs picture 
         location ~ "^/tfs" {
             client_body_buffer_size 5m;
@@ -520,10 +528,9 @@ http {
         }
 
         location ~ "/norm_m_(\d{1,3})/(.+)$" {
-            set $g_w $1;
-            set $g_h $1;
+            set $size $1;
             set $tail $2;
-            rewrite ^ /i2/$tail last;
+            rewrite ^ /norm_$size/$tail last;
         }
 
         # match /i2/tfsname
