--- a/nginx.conf
+++ b/nginx.conf
@@ -158,7 +158,12 @@ http {
             set $path $1;
             rewrite ^ /$path/$tail last;
         }
-       
+        
+        # match /tfs/i1/* or /tfs/i2/* ...
+        location ~ "^(?:/tfs)/(?<cat>i\d)/(?<tail>.*)$" {
+            rewrite ^ /$cat/$tail last;
+        }
+
         # temporary location for 12.12. Must precede other locations
         location ~ "^/(.*)/label_(\d+)_(T[^/]{17,50})$" {
             set $path $1;
@@ -482,11 +487,16 @@ http {
             rewrite ^ /i2/$tail last;
         }
 
+        
+
         # get/post tfs picture 
         location ~ "^/tfs" {
             client_body_buffer_size 5m;
             types {}
             default_type "";
+            if ($host ~ 'img.ffanimg.com' ) {
+               rewrite ^/tfs/(.*)$ http://img1.ffan.com/$1 permanent;
+            }
             if ($request_method = "GET") {
                 rewrite ^/tfs/(.*) /v2/tfs/$1 last;
             }
@@ -545,14 +555,16 @@ http {
                     ngx.var.g_fmt, ngx.var.g_q, 
                     ngx.var.g_w, ngx.var.g_h, ngx.var.g_r)
                 if _path == nil then
-                    ngx.log(ngx.ERR, "not set size")
-                    ngx.exit(ngx.HTTP_NOT_FOUND)
+                    ngx.log(ngx.ERR, "not set size in i2 path")
                 end
                 ngx.var._src = _src
                 ngx.var._q = _q
                 ngx.var._fmt = _fmt
                 return _path     
             ';
+            if ($reqPath = '') {
+                return 404;
+            }
             if ( $tfsname ~* "^h00.*") {
                 return 404;
             }
@@ -611,6 +623,10 @@ http {
                 ngx.req.set_uri("/innerImages" .. ngx.var.reqPath, true);   
                 ';
             }
+        }
+
+        location / {
+            return 404;
         }
     }
 }
