--- a/nginx.conf
+++ b/nginx.conf
@@ -137,13 +137,13 @@ http {
         set $g_w "";
         set $g_h "";
         set $g_r "";
-        location ~ "^/(.*?)_(?<g_w>[1-9]\d{2})?x(?<g_h>[1-9]\d{2})?(?<g_r>!|!!)?$" {
+        location ~ "^/(.*?)_(?<g_w>[1-9]\d{1,2})?x(?<g_h>[1-9]\d{1,2})?(?<g_r>!|!!)?$" {
             set $path $1;
             rewrite ^ /$path last;
         }
 
         # match /*_100!/* or /*_100!!/*
-        location ~ "^/(.*?/)?(\w+)_([1-9]\d{2})(?<g_r>!|!!)/(?<tail>.*?)$" {
+        location ~ "^/(.*?/)?(\w+)_([1-9]\d{1,2})(?<g_r>!|!!)/(?<tail>.*?)$" {
             set $path $1;
             set $norm $2;
             set $size $3;
@@ -487,15 +487,13 @@ http {
             rewrite ^ /i2/$tail last;
         }
 
-        
-
         # get/post tfs picture 
         location ~ "^/tfs" {
             client_body_buffer_size 5m;
             types {}
             default_type "";
             if ($host ~ 'img.ffanimg.com' ) {
-               rewrite ^/tfs/(.*)$ http://img1.ffan.com/$1 permanent;
+               return 404;
             }
             if ($request_method = "GET") {
                 rewrite ^/tfs/(.*) /v2/tfs/$1 last;
