add breakpoint Transmission feature

--- a/nginx.conf
+++ b/nginx.conf
@@ -90,7 +90,6 @@ http {
             header_filter_by_lua '
             local ngx = require "ngx"
             local img_server = require "imageserver"
-            
             local uri = ngx.var.uri;
             uri = string.gsub(uri, "^%/innerImages", "")
             local img = img_server.get_tfs_as_img(nil, "/usr/local/tfsimage" .. uri)
@@ -103,12 +102,21 @@ http {
             tcp_nopush on;
         }
 
+        location ^~ /innerCahe {
+            internal;
+
+            alias /usr/local/tfsimage;
+            expires max;
+            tcp_nodelay off;
+            tcp_nopush on;
+        }
+
         # save picture extend options, such as _q .webp
         set $g_src "i1";
         set $g_nor "i2";
         set $g_lab "i3";
         set $g_usr "i4";
-        set $_ext "";
+        set $g_tfs "i5";
 
         # math /*_.jpg or /*_.png or /*_.jif or /*_.png
         set $g_fmt "";
@@ -363,6 +371,33 @@ http {
                 end
 
                 ngx.req.set_uri("/innerImages" .. ngx.var.reqPath, true)
+                ';
+            }
+        }
+
+        # match /i5/*
+        location ~ "^/i5/(?<tfsname>[[:alnum:]\._]{18,50})" {
+            set_by_lua $reqPath '
+                 local cache = require "util.cache"
+                 return cache.path_src(ngx.var.g_tfs, ngx.var.tfsname)
+            ';
+            set $filePath "$image_root$reqPath";
+            if (-f $filePath) {
+                rewrite ^ /innerCahe$reqPath last;
+            }
+            if (!-f $filePath) {
+                rewrite_by_lua '
+                local img_server = require "imageserver"
+
+                local body, err = img_server.get_tfs_as_blob(ngx.var.v1_url .. "/", ngx.var.tfsname)
+                if not (body) then
+                    ngx.exit(ngx.HTTP_NOT_FOUND)
+                end
+                local file = io.open(ngx.var.filePath, "w")
+                file:write(body)
+                file:close()
+
+                ngx.req.set_uri("/innerCahe" .. ngx.var.reqPath, true)
                 ';
             }
         }
