add head feature

--- a/nginx.conf
+++ b/nginx.conf
@@ -533,6 +533,9 @@ http {
             if ($request_method = "GET") {
                 rewrite ^/tfs/(.*) /v2/tfs/$1 last;
             }
+            if ($request_method = "HEAD") {
+                rewrite ^/tfs/(.*) /v1/tfs/$1 last;
+            }
             if ($request_method = "PUT") {
                 rewrite ^/tfs/(.*) /v1/tfs/$1 last; 
             }
@@ -556,7 +559,12 @@ http {
                 end
                 local data = cjson.decode(body);
                 local tfsname = data["TFS_FILE_NAME"]
-                ngx.log(ngx.ERR, "POST:" .. tfsname ..", " .. string.len(body_data))
+                local ngxhelper = require "util.ngxhelper"
+                local clientip = ngxhelper.get_client_ip(ngx.var.http_x_forwarded_for)
+                ngx.log(ngx.ERR, "POST:" 
+                    .. tfsname ..", " 
+                    .. string.len(body_data) .. ", " 
+                    .. clientip)
                 ngx.print(tfsname)
                 ';
             }
