--- a/logstash/agent.conf
+++ b/logstash/agent.conf
@@ -7,7 +7,7 @@ input {
 }
 filter {
   grok {
-	match => ["message" , "(?<date>%{YEAR}[./-]%{MONTHNUM}[./-]%{MONTHDAY}[- ]%{TIME}) \[%{LOGLEVEL:severity}\] %{POSINT}#%{NUMBER}: \*%{NUMBER} \[%{WORD:from}\] %{GREEDYDATA} POST:%{GREEDYDATA:url}, %{NUMBER:size}(?:, client: (?<client>%{IP}|%{HOSTNAME}))(?:, server: %{IPORHOST:server})%{GREEDYDATA}"]
+	match => ["message" , "(?<date>%{YEAR}[./-]%{MONTHNUM}[./-]%{MONTHDAY}[- ]%{TIME}) \[%{LOGLEVEL:severity}\] %{POSINT}#%{NUMBER}: \*%{NUMBER} \[%{WORD:from}\] %{GREEDYDATA} POST:%{GREEDYDATA:url}, %{NUMBER:size}, (?<client>%{IP}|%{HOSTNAME}), (?:client: (%{IP}|%{HOSTNAME}))(?:, server: %{IPORHOST:server})%{GREEDYDATA}"]
     remove_field => ["severity", "message", "path", "from", "@timestamp", "@version"] 
   }
   if "_grokparsefailure" in [tags] { 
