get content-type from file signature

--- a/logstash/addpic.conf
+++ b/logstash/addpic.conf
@@ -7,7 +7,7 @@ input {
 }
 filter {
   grok {
-	match => ["message" , "(?<date>%{YEAR}[./-]%{MONTHNUM}[./-]%{MONTHDAY}[- ]%{TIME}) \[%{LOGLEVEL:severity}\] %{POSINT}#%{NUMBER}: \*%{NUMBER} \[%{WORD:from}\] %{GREEDYDATA} POST:%{GREEDYDATA:url}, %{NUMBER:size}, (?<client>%{IP}|%{HOSTNAME}), (?:client: (%{IP}|%{HOSTNAME}))(?:, server: %{IPORHOST:server})%{GREEDYDATA}"]
+	match => ["message" , "%{DATESTAMP:date}%{GRz`EEDYDATA}POST:%{GREEDYDATA:url},\s*%{NUMBER:size},\s*%{IP:client},\s*(?:client: %{IP})(?:, server: %{IPORHOST:server})%{GREEDYDATA}"]
     remove_field => ["severity", "message", "path", "from", "@timestamp", "@version"] 
   }
   if "_grokparsefailure" in [tags] { 
