--- a/nginx.conf
+++ b/nginx.conf
@@ -327,6 +327,12 @@ http {
         # no cache
         location ~ "^/v2/tfs/(.*)" {
             set $tfsname $1;
+            if ($tfsname ~ ^$) {
+                return 404;
+            }
+            if ($http_range !~ ^$) {
+                rewrite ^ /i5/$tfsname last;
+            }
             content_by_lua '
             local img_server = require "imageserver"
             local blob = img_server.get_tfs_as_blob(ngx.var.v1_url .. "/", ngx.var.tfsname)
@@ -338,8 +344,11 @@ http {
                 ngx.header["Content-Type"] = "image/jpeg"
             elseif blob:sub(1,8) == "\137\80\78\71\13\10\26\10" then
                 ngx.header["Content-Type"] = "image/png"
+            else
+                local mimetypes = require "mimetypes"
+                ngx.header["Content-Type"] = mimetypes.get_type(ngx.var.tfsname, blob:sub(1,8))
             end
-            --ngx.header["Content-Type2"] = "debug"
+            ngx.header["Content-Length"] = #blob
             ngx.print(blob)
             ';
         }
