--- a/nginx.conf
+++ b/nginx.conf
@@ -356,8 +356,8 @@ http {
         # match /i1/*
         location ~ "^/i1/(?<tfsname>[[:alnum:]\._]{18,50})" {
             set_by_lua $reqPath '
-                 local cache = require "util.cache"
-                 return cache.path_src(ngx.var.g_src, ngx.var.tfsname)
+                local cache = require "util.cache"
+                return cache.path_src(ngx.var.g_src, ngx.var.tfsname)
             ';
             set $filePath "$image_root$reqPath";
             if (-f $filePath) {
@@ -378,6 +378,33 @@ http {
                     ngx.log(ngx.ERR, "ivk method[img:write] error, code:" .. code .. " msg:" .. msg)
                     ngx.exit(ngx.HTTP_NOT_FOUND)
                 end
+
+                ngx.req.set_uri("/innerImages" .. ngx.var.reqPath, true)
+                ';
+            }
+        }
+
+        # match /i1/src/*
+        location ~ "^/i1/src/(?<tfsname>[[:alnum:]\._]{18,50})" {
+            set_by_lua $reqPath '
+                local cache = require "util.cache"
+                return cache.path_src(ngx.var.g_tfs, ngx.var.tfsname)
+            ';
+            set $filePath "$image_root$reqPath";
+            if (-f $filePath) {
+                rewrite ^ /innerImages$reqPath last;
+            }
+            if (!-f $filePath) {
+                rewrite_by_lua '
+                local img_server = require "imageserver"
+
+                local body, err = img_server.get_tfs_as_blob(ngx.var.v1_url .. "/", ngx.var.tfsname)
+                if not (body) then
+                    ngx.exit(ngx.HTTP_NOT_FOUND)
+                end
+                local file = io.open(ngx.var.filePath, "w")
+                file:write(body)
+                file:close()
 
                 ngx.req.set_uri("/innerImages" .. ngx.var.reqPath, true)
                 ';
