添加大文件location

--- a/nginx.conf
+++ b/nginx.conf
@@ -558,6 +558,51 @@ http {
             rewrite ^ /i2/$tail last;
         }
 
+        # get/post big file 
+        location ~ "^/tfs/big" {
+            client_body_buffer_size 75m;
+            types {}
+            default_type "";
+            if ($request_method = "GET") {
+                rewrite ^/tfs/big/(.*) /v1/tfs/$1 last;
+            }
+            if ($request_method = "HEAD") {
+                rewrite ^/tfs/big/(.*) /v1/tfs/$1 last;
+            }
+            if ($host ~ 'img.ffanimg.com' ) {
+               return 404;
+            }
+            if ($host !~ '^tfs.intra.*$' ) {
+               return 403;
+            }
+            if ($request_method = "POST") {
+                content_by_lua '
+                local cjson = require "cjson"
+                local request_method = ngx.var.request_method
+                ngx.req.read_body()
+                local body_data = ngx.req.get_body_data()
+                local http = require "resty.http"
+                local hc = http:new()
+                local args = ngx.var.args
+                if args == nil  then args = "" end
+                local ok, code, headers, status, body  = hc:request { url = ngx.var.v1_url .. 
+                    "?" .. args, method="POST",  body=body_data}
+                if code ~= 200 then
+                    ngx.exit(code)
+                end
+                local data = cjson.decode(body);
+                local tfsname = data["TFS_FILE_NAME"]
+                local ngxhelper = require "util.ngxhelper"
+                local clientip = ngxhelper.get_client_ip(ngx.var.http_x_forwarded_for)
+                ngx.log(ngx.ERR, "POST:" 
+                    .. tfsname ..", " 
+                    .. string.len(body_data) .. ", " 
+                    .. clientip)
+                ngx.print(tfsname)
+                ';
+            }
+        }
+
         # get/post tfs picture 
         location ~ "^/tfs" {
             client_body_buffer_size 5m;
