bugfix max upload file

--- a/nginx.conf
+++ b/nginx.conf
@@ -560,6 +560,8 @@ http {
 
         # get/post big file 
         location ~ "^/tfs/big" {
+            # https://github.com/openresty/lua-nginx-module#ngxreqget_body_data
+            client_max_body_size 75m;
             client_body_buffer_size 75m;
             types {}
             default_type "";
@@ -581,6 +583,9 @@ http {
                 local request_method = ngx.var.request_method
                 ngx.req.read_body()
                 local body_data = ngx.req.get_body_data()
+                if body_data == nil then
+                    ngx.exit(413)
+                end
                 local http = require "resty.http"
                 local hc = http:new()
                 local args = ngx.var.args
@@ -603,8 +608,9 @@ http {
             }
         }
 
-        # get/post tfs picture 
+        # get/post less than 5m file and will set response header
         location ~ "^/tfs" {
+            client_max_body_size 5m;
             client_body_buffer_size 5m;
             types {}
             default_type "";
@@ -629,6 +635,9 @@ http {
                 local request_method = ngx.var.request_method
                 ngx.req.read_body()
                 local body_data = ngx.req.get_body_data()
+                if body_data == nil then
+                    ngx.exit(413)
+                end
                 local http = require "resty.http"
                 local hc = http:new()
                 local args = ngx.var.args
