add format for src picture

--- a/nginx.conf
+++ b/nginx.conf
@@ -259,7 +259,7 @@ http {
                     img:set_quality(tonumber(ngx.var.g_q))
                 end
 
-                img:to_webp(ngx.var.g_suf, ngx.var.g_fmt)
+                img:to_webp(ngx.var.g_fmt)
 
                 -- write file to local 
                 cache.make_dir(ngx.var.filePath)
@@ -357,7 +357,7 @@ http {
         location ~ "^/i1/(?<tfsname>[[:alnum:]\._]{18,50})" {
             set_by_lua $reqPath '
                 local cache = require "util.cache"
-                return cache.path_src(ngx.var.g_src, ngx.var.tfsname)
+                return cache.path_src2(ngx.var.g_src, ngx.var.tfsname, ngx.var.g_fmt)
             ';
             set $filePath "$image_root$reqPath";
             if (-f $filePath) {
@@ -372,6 +372,9 @@ http {
                 if not (img) then
                     ngx.exit(ngx.HTTP_NOT_FOUND)
                 end
+
+                img:to_webp(ngx.var.g_fmt)
+
                 local ok, msg, code = img:write(ngx.var.filePath)
                 img:destroy()
                 if not (ok) then
@@ -529,7 +532,7 @@ http {
                     img:set_quality(tonumber(ngx.var.g_q))
                 end
 
-                img:to_webp(ngx.var.g_suf, ngx.var.g_fmt)
+                img:to_webp(ngx.var.g_fmt)
 
                 -- write file to local 
                 cache.make_dir(ngx.var.filePath)
@@ -740,7 +743,7 @@ http {
                     img:set_quality(tonumber(ngx.var.g_q))
                 end
 
-                img:to_webp(ngx.var.g_suf, ngx.var.g_fmt)
+                img:to_webp(ngx.var.g_fmt)
 
                 -- write file to local 
                 cache.make_dir(ngx.var.filePath)
