add quantity to src

--- a/nginx.conf
+++ b/nginx.conf
@@ -357,7 +357,7 @@ http {
         location ~ "^/i1/(?<tfsname>[[:alnum:]\._]{18,50})" {
             set_by_lua $reqPath '
                 local cache = require "util.cache"
-                return cache.path_src2(ngx.var.g_src, ngx.var.tfsname, ngx.var.g_fmt)
+                return cache.path_src2(ngx.var.g_src, ngx.var.tfsname, ngx.var.g_fmt, ngx.var.g_q)
             ';
             set $filePath "$image_root$reqPath";
             if (-f $filePath) {
@@ -371,6 +371,10 @@ http {
                 local img, err = img_server.get_tfs_as_img(ngx.var.v1_url .. "/", ngx.var.tfsname)
                 if not (img) then
                     ngx.exit(ngx.HTTP_NOT_FOUND)
+                end
+
+                if ngx.var._q ~= "" then
+                    img:set_quality(tonumber(ngx.var.g_q))
                 end
 
                 img:to_webp(ngx.var.g_fmt)
