--- a/nginx.conf
+++ b/nginx.conf
@@ -373,7 +373,7 @@ http {
                     ngx.exit(ngx.HTTP_NOT_FOUND)
                 end
 
-                if ngx.var._q ~= "" then
+                if ngx.var.g_q ~= "" then
                     img:set_quality(tonumber(ngx.var.g_q))
                 end
 
