rewrite get to i1

--- a/nginx.conf
+++ b/nginx.conf
@@ -333,6 +333,9 @@ http {
             if ($http_range !~ ^$) {
                 rewrite ^ /i5/$tfsname last;
             }
+            if ($host ~ '^img.*ffan.com$' ) {
+               rewrite ^ /i1/$tfsname last;
+            }
             content_by_lua '
             local img_server = require "imageserver"
             local blob = img_server.get_tfs_as_blob(ngx.var.v1_url .. "/", ngx.var.tfsname)
