bugfix v2/tfs/orig

--- a/nginx.conf
+++ b/nginx.conf
@@ -324,6 +324,10 @@ http {
             }
         }
 
+        location ~ "^/v2/tfs/orig/[[:alnum:]\._]{18,50}$" {
+            rewrite ^/v2/tfs/orig/(.*) /v2/tfs/$1 last;
+        }
+
         # no cache
         location ~ "^/v2/tfs/(.*)" {
             set $tfsname $1;
