--- a/nginx.conf
+++ b/nginx.conf
@@ -379,7 +379,9 @@ http {
                 if not (img) then
                     ngx.exit(ngx.HTTP_NOT_FOUND)
                 end
-
+                if img:get_format() == "gif" then
+                    ngx.req.set_uri("/i1/src/" .. ngx.var.tfsname, true)
+                end
                 if ngx.var.g_q ~= "" then
                     img:set_quality(tonumber(ngx.var.g_q))
                 end
