--- a/nginx.conf
+++ b/nginx.conf
@@ -377,13 +377,10 @@ http {
 
                 local img, err = img_server.get_tfs_as_img(ngx.var.v1_url .. "/", ngx.var.tfsname)
                 if not (img) then
-                    ngx.exit(ngx.HTTP_NOT_FOUND)
+                    ngx.req.set_uri("/tfs/big/" .. ngx.var.tfsname, true)
                 end
-                local fmt = img:get_format()
-                if fmt == "gif" then
+                if img:get_format() == "gif" then
                     ngx.req.set_uri("/i1/src/" .. ngx.var.tfsname, true)
-                elseif fmt ~= "png" and fmt ~= "jpg" and fmt ~= "jpeg" then
-                    ngx.req.set_uri("/v1/tfs/" .. ngx.var.tfsname, true)
                 end
                 if ngx.var.g_q ~= "" then
                     img:set_quality(tonumber(ngx.var.g_q))
