--- a/nginx.conf
+++ b/nginx.conf
@@ -377,7 +377,7 @@ http {
 
                 local img, err = img_server.get_tfs_as_img(ngx.var.v1_url .. "/", ngx.var.tfsname)
                 if not (img) then
-                    ngx.req.set_uri("/tfs/big/" .. ngx.var.tfsname, true)
+                    ngx.req.set_uri("/v1/tfs/" .. ngx.var.tfsname, true)
                 end
                 if img:get_format() == "gif" then
                     ngx.req.set_uri("/i1/src/" .. ngx.var.tfsname, true)
