bugfix: multi thread share http client

--- a/nginx.conf
+++ b/nginx.conf
@@ -668,7 +668,7 @@ http {
                 local tfsname = data["TFS_FILE_NAME"]
                 local ngxhelper = require "util.ngxhelper"
                 local clientip = ngxhelper.get_client_ip(ngx.var.http_x_forwarded_for)
-                ngx.log(ngx.ERR, "POST:" 
+                ngx.log(ngx.ALERT, "POST:" 
                     .. tfsname ..", " 
                     .. string.len(body_data) .. ", " 
                     .. clientip)
