--- a/nginx.conf
+++ b/nginx.conf
@@ -380,7 +380,8 @@ http {
                     ngx.log(ngx.ERR, err)
                     ngx.req.set_uri("/v1/tfs/" .. ngx.var.tfsname, true)
                 end
-                if img:get_format() == "gif" then
+                fmt = img:get_format()
+                if fmt == "gif" or fmt == "svg" then
                     ngx.req.set_uri("/i1/src/" .. ngx.var.tfsname, true)
                 end
                 if ngx.var.g_q ~= "" then
