--- a/nginx.conf
+++ b/nginx.conf
@@ -93,7 +93,12 @@ http {
             local uri = ngx.var.uri;
             uri = string.gsub(uri, "^%/innerImages", "")
             local img = img_server.get_tfs_as_img(nil, "/usr/local/tfsimage" .. uri)
-            ngx.header["Content-Type"] = img:get_minitype()
+            local mt = img:get_minitype()
+            if mt == "" or string.find(uri, "%.svg") then
+                mt = "image/svg+xml"
+            end
+            ngx.header["Content-Type"] = mt
+
             img:destroy()
             ';
             alias /usr/local/tfsimage;
@@ -381,7 +386,7 @@ http {
                     ngx.req.set_uri("/v1/tfs/" .. ngx.var.tfsname, true)
                 end
                 fmt = img:get_format()
-                if fmt == "gif" or fmt == "svg" then
+                if fmt == "gif" then
                     ngx.req.set_uri("/i1/src/" .. ngx.var.tfsname, true)
                 end
                 if ngx.var.g_q ~= "" then
